          to Requires in openvrml.pc.

        * src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/private.h,
          src/openvrml/OpenVRML/script.cpp:  Quelled some warnings from
          icc 7.0.

2002-12-08  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/vrml97node.cpp: Fix bug in FontStyle
          destructor.

2002-12-05  Braden McDaniel  <braden@endoframe.com>

        * doc/doxygen-header: Add link to bookmark icon to docs.

        * Makefile.am, README, configure.ac, openvrml.spec.in,
          doc/Makefile.am, m4/Makefile.am, src/lookat/Makefile.am,
          src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml-gl/OpenVRML/GL/Makefile.am, m4/jpeg.m4 m4/png.m4,
          m4/spidermonkey.m4, m4/zlib.m4: Modified several configure
          options to be more "feature oriented".

2002-12-04  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp: Added VrmlMatrix support
          to JavaScript binding.

        * doc/Doxyfile.in: Don't generate API docs for Java sources.

2002-12-03  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.h: Const-correctness
          improvements and exception specifications for VrmlMatrix.

        * src/openvrml/OpenVRML/node.cpp: Fixed field value type
          agreement test in Node::addRoute.

2002-12-02  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.h: Added OPENVRML_SCOPE to some API
          elements.

        * src/openvrml/OpenVRML/Makefile.am: ScriptJDK.h should not be
          installed.

        * src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,